fixed issue with too much wdth

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,6 +4,13 @@ body {
     font-family: Arial, sans-serif;
 }
 
+html, body {
+    overflow-x: hidden; 
+    margin: 0; 
+    padding: 0; 
+    width: 100%; 
+}
+
 a {
     color: black; 
     text-decoration: none; 
@@ -26,6 +33,8 @@ nav {
     padding: 10px;
     text-align: center; 
     width: 100%; 
+    max-width: 100%;
+    box-sizing: border-box;
     margin-top: 0;
 }
 
